<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_margin="10dip"
    android:background="@drawable/border"
    android:padding="20dip"
    tools:context=".TemperatureSampleActivity" >
    
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dip"
        android:text="@string/hot_temp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/hot_temp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textView5"
        android:layout_marginTop="10dip"
        android:layout_marginStart="10dip"
        android:text="@string/default_temp"
        android:textColor="@android:color/holo_orange_dark"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <ImageButton
        android:id="@+id/hot_temp_help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dip"
        android:layout_alignTop="@+id/hot_temp_label"
        android:layout_toEndOf="@+id/critical_temp_label"
        android:background="@null"
        android:src="@drawable/help_icon"
        tools:ignore="ContentDescription"/>
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="10dip"
        android:text="@string/critical_temp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/critical_temp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textView5"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="10dip"
        android:layout_marginStart="10dip"
        android:text="@string/default_temp"
        android:textColor="@android:color/holo_red_light"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <ImageButton
        android:id="@+id/critical_temp_help_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dip"
        android:layout_alignTop="@+id/critical_temp_label"
        android:layout_toEndOf="@+id/critical_temp_label"
        android:background="@null"
        android:src="@drawable/help_icon"
        tools:ignore="ContentDescription"/>
    
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dip"
        android:text="@string/current_temp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/current_temp_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textView5"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="10dip"
        android:layout_marginStart="10dip"
        android:text="@string/default_temp"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="20dip"
        android:text="@string/time"
        android:labelFor="@+id/time_text"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <EditText
        android:id="@+id/time_text"
        android:layout_width="100dip"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/textView1"
        android:layout_below="@+id/textView5"
        android:layout_marginStart="10dip"
        android:layout_marginTop="10dip"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_time" />

     <Button
        android:id="@+id/subscribe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/time_text"
        android:layout_marginTop="10dip"
        android:text="@string/subscribe">

        <requestFocus />
        
     </Button>
    
    <Button
        android:id="@+id/unsubscribe_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time_text"
        android:layout_toEndOf="@+id/subscribe_button"
        android:layout_marginTop="10dip"
        android:text="@string/unsubscribe" />

    <TextView
        android:id="@+id/status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subscribe_button"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dip"
        android:text="@string/unsubscribed"
        android:textColor="@color/light_red"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>
